--- a/types/package.json
+++ b/types/package.json
@@ -4,14 +4,13 @@
   "description": "The types and schema used in pryzm-registry",
   "main": "index.ts",
   "scripts": {
-    "generate": "ts-json-schema-generator --path relayers.ts --type 'Relayers' -o ../schemas/relayers.schema.json -i 'https://pryzm.zone/registry/relayers.schema.json' --no-top-ref"
+    "generate": "ts-json-schema-generator --path src/relayers.ts --type 'Relayers' -o ../schemas/relayers.schema.json -i 'https://pryzm.zone/registry/relayers.schema.json' --no-top-ref"
   },
   "dependencies": {
-    "jsonschema": "^1.4.1",
     "ts-json-schema-generator": "^2.1.1"
   },
-  "packageManager": "pnpm@9.1.1+sha512.14e915759c11f77eac07faba4d019c193ec8637229e62ec99eefb7cf3c3b75c64447882b7c485142451ee3a6b408059cdfb7b7fa0341b975f12d0f7629c71195",
   "devDependencies": {
     "@types/node": "^20.12.12"
-  }
+  },
+  "packageManager": "pnpm@9.1.1+sha512.14e915759c11f77eac07faba4d019c193ec8637229e62ec99eefb7cf3c3b75c64447882b7c485142451ee3a6b408059cdfb7b7fa0341b975f12d0f7629c71195"
 }
